# budgetbytes

./: app.py  pyproject.toml
.devcontainer/: Dockerfile
budgetbytes/: main.py  mealplan.py  recipe.py  scratchpad.py
budgetbytes/data/: budgetbytes-recipes.csv
budgetbytes/data/cache/: bakedbeefblackbeantacos.html  broccolisaladhoneyyogurtdressing.html  chimichurrigoodanythingeverythingsauce.html  cowboycaviar.html  grapefetabaconsaladcreamydijondressing.html  pasta5ingredientbuttertomatosauce.html  pepperonistuffedbakedpotatoes.html  slowcookercoconutcurrylentils.html  stickygingersoyglazedchicken.html  ultimatesouthwestscrambledeggs.html  veggiepackedfreezerreadybreakfastsandwiches.html
budgetbytes/lib/: formatters.py  parse_ingredients.py
